# TCMT-M-client

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CMakeLists.txt  GEMINI.md  TCMT.sln  TCMT.vcxproj  TCMT.vcxproj.filters  TestNav.cs  check_avalonia_docs.py  fix_check.py  litho.toml  temp_problems.txt
.claude/: settings.local.json
.github/agents/: tcmt-dev.agent.md
.github/workflows/: build.yml  msvc.yml  sync-to-gitee-gitlab.yml  update-pawnio.yml
AvaloniaUI/: App.axaml  App.axaml.cs  AvaloniaUI.csproj  Program.cs  TCMT.Avalonia.csproj  app.manifest
AvaloniaUI/Converters/: SelectedPageConverter.cs  ValueConverters.cs
AvaloniaUI/Core/: Constants.cs
AvaloniaUI/Core/Converters/: Converters.axaml  ValueConverters.cs
AvaloniaUI/Core/Extensions/: FormatUtils.cs
AvaloniaUI/Models/: SystemInfo.cs
AvaloniaUI/Services/: DialogService.cs  FontService.cs  NavigationService.cs
AvaloniaUI/Services/Contracts/: IDialogService.cs  IFontService.cs  IHardwareService.cs  INavigationService.cs
AvaloniaUI/Services/Hardware/: HardwareMonitorService.cs
AvaloniaUI/Services/Hardware/IPC/: IPCMemoryReader.cs  IPCPipeClient.cs  IPCSchema.cs  IPCService.cs  IPCSystemInfoMapper.cs
AvaloniaUI/Services/IPCServices/: IPCMemoryReader.cs  IPCPipeClient.cs  IPCSchema.cs  IPCSystemInfoMapper.cs
AvaloniaUI/Themes/: DarkTheme.axaml  ThemeManager.cs
AvaloniaUI/ViewModels/: CpuDetailViewModel.cs  CpuViewModel.cs  DashboardViewModel.cs  GpuViewModel.cs  MainWindowViewModel.cs  MemoryViewModel.cs  NetworkDetailViewModel.cs  NetworkViewModel.cs  SettingsViewModel.cs  StorageDetailViewModel.cs  StorageViewModel.cs  TemperaturesViewModel.cs  ViewModelBase.cs
AvaloniaUI/Views/: CpuDetailView.axaml  CpuDetailView.axaml.cs  CpuView.axaml  CpuView.axaml.cs  DashboardView.axaml  DashboardView.axaml.cs  GpuView.axaml  GpuView.axaml.cs  MainWindow.axaml  MainWindow.axaml.cs  MemoryView.axaml  MemoryView.axaml.cs  NetworkDetailView.axaml  NetworkDetailView.axaml.cs  NetworkView.axaml  NetworkView.axaml.cs  SettingsView.axaml  SettingsView.axaml.cs  StorageDetailView.axaml  StorageDetailView.axaml.cs  StorageView.axaml  StorageView.axaml.cs  TemperaturesView.axaml  TemperaturesView.axaml.cs
cmake/: Dependencies.cmake  Options.cmake  PDCurses.vcxproj  Platform.cmake
designs/: attitude-3d.html  attitude-3d.js  avalonia-ui.pen  ipc-client.js
docs/: apple-silicon-private-apis.md  docs_architecture_and_protocol_plan_v0.14_full_Version11.md  linux-gap-analysis.md  repo-directory.md  session.md  tech-debt.md
docs/adr/: 0001-schema-driven-ipc.md  0002-mcp-pure-client-no-ipcserver.md  0003-cpp-cli-bridge-librehardwaremonitor.md  0004-nvml-dynamic-loading.md  0005-unified-ipcserver-with-ifdef.md
scripts/: codesign.sh  install_helper.sh
src/: CMakeLists.txt  TCMT-M-Info.plist  TCMT-M.entitlements  main.cpp  main_linux.cpp  main_mac.cpp  resources.rc
src/core/: ModuleCoordinator.cpp  ModuleCoordinator.h  ModuleCoordinator_cpu.cpp  ModuleCoordinator_io.cpp  ServerProbe.cpp  ServerProbe.h  SystemEventMonitor.cpp  UserNotifier.h
src/core/Config/: ConfigManager.cpp  ConfigManager.h
src/core/DataStruct/: DataStruct.h  SharedMemoryManager.h  SharedMemoryManager_Linux.cpp  SharedMemoryManager_Windows.cpp  SharedMemoryManager_macOS.cpp
src/core/HTTPServer/: MotionHTTPServer.cpp  MotionHTTPServer.h
src/core/IPC/: IPCClient.cpp  IPCClient.h  IPCData.h  IPCServer.cpp  IPCServer.h
src/core/MCP/: MCPServer.cpp  MCPServer.h
src/core/Platform/: Platform_Linux.cpp
src/core/Utils/: JThreadCompat.h  LibreHardwareMonitorBridge.cpp  Logger.cpp  Logger.h  TimeUtils.cpp  WinUtils.cpp  stdafx.h
src/core/accel/: AccelSensor.h  AccelSensor.mm  SpsManager.h  SpsManager.mm
src/core/als/: ALSensor.h  ALSensor.mm
src/core/battery/: BatteryHealth.h  BatteryHealth.mm
src/core/bluetooth/: BluetoothInfo.cpp  BluetoothInfo.h  BluetoothInfo.mm
src/core/board/: BoardInfo.cpp
src/core/coordinator/: ModuleCoordinator.cpp  ModuleCoordinator.h  ModuleCoordinator_cpu.cpp  ModuleCoordinator_io.cpp
src/core/cpu/: CpuInfo.cpp  CpuInfo.h  CpuTempReader.cpp  CpuTempReader.h  RyzenSmuReader.cpp  RyzenSmuReader.h
src/core/disk/: DiskInfo.cpp  DiskInfo.h  SmartReader.cpp  SmartReader.h  SmartReader_mac.mm
src/core/display/: DisplayInfo.h  DisplayInfo.mm
src/core/etw/: EtwMonitor.cpp  EtwMonitor.h
src/core/fan/: FanSpeed.h  FanSpeed.mm
src/core/gpu/: GpuInfo.cpp  GpuInfo.h
src/core/history/: HistoryLogger.cpp  HistoryLogger.h
src/core/ioreport/: IOReportSampler.mm
src/core/memory/: MemoryInfo.cpp  MemoryInfo.h  MemoryTempReader.cpp  MemoryTempReader.h  PawnIOWrapper.cpp  PawnIOWrapper.h
src/core/network/: NetworkAdapter.cpp  NetworkAdapter.h
src/core/notifications/: DeviceChangeNotifier.h  SystemEventMonitor.h  UserNotifier.cpp
src/core/os/: OSInfo.cpp  OSInfo.h
src/core/power/: PowerInfo.cpp  PowerMonitor.cpp  PowerMonitor.h  PowerMonitor_mac.mm
src/core/process/: ProcessTop.h  ProcessTop.mm
src/core/temperature/: BoardTempReader.cpp  BoardTempReader.h  IntelMchbarReader.cpp  IntelMchbarReader.h  IntelOobmsmReader.cpp  IntelOobmsmReader.h  TemperatureWrapper.cpp  TemperatureWrapper.h
src/core/usb/: UsbInfo.cpp
src/core/wifi/: WiFiInfo.cpp  WiFiInfo.h  WiFiInfo.mm  WiFiInfo_wlan.c  WiFiInfo_wlan.h
src/helper/: com.tcmt.sensorhelper.info.plist  com.tcmt.sensorhelper.launchd.plist  com.tcmt.sensorhelper.plist  tcmt_sensor_helper.c
src/resources/pawnio/: .sha256sum
src/tools/: sensor_recorder.mm
src/tui/: TuiApp.cpp  TuiApp.h
tests/: TCMT.Tests.vcxproj  test_ipc.cpp  vcpkg.json
tools/: mcp-http-bridge.js  mcp-http-bridge.mjs
tools/ioreport/: ioreport_dump  ioreport_dump.cpp
